@@ -62,8 +62,10 @@ if ( $id > 0 ) {
         translate("The subject was") . " \"" . $name . " \"\n" .
         translate("The description is") . " \"" . $description . "\"\n" .
         translate("Date") . ": " . date_to_str ( $fmtdate ) . "\n" .
+        ( ( empty ( $hour ) && empty ( $minute ) ) ? "" :
         translate("Time") . ": " .
-        display_time ( ( $hour * 10000 ) + ( $minute * 100 ) ) . "\n\n\n";
+        display_time ( ( $hour * 10000 ) + ( $minute * 100 ) ) ) .
+        "\n\n\n";
       if ( ! empty ( $server_url ) ) {
         $url = $server_url .  "view_entry.php?id=" .  $id;
         $msg .= "\n\n" . $url;
